Fix homepage route
- Add CRUD components

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "music-buddy",
-  "homepage": "https://github.com/enbacon/music-buddy",
+  "homepage": "https://enbacon.github.io/music-buddy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
